--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -247,6 +247,7 @@ Items were chosen to intuitively cover a range of likely frequencies of action, 
 
 For each event, participants were asked two questions, with associated dependent measures:
 \begin{enumerate}
+\itemsep0em
 \item ``How many \{men, women\} have \textsc{done action} before?'' Participants responded ``N out of every J,'' by entering a number for N and choosing J from a drop-down with options 1000 - 10 million (default: 1000).
 % 
 %\subitem Response format: N out of every J
@@ -258,14 +259,14 @@ For each event, participants were asked two questions, with associated dependent
 %\subitem M = free response
 %\subitem K = \{week, month, year, 5 years\} (default: year)
 \end{enumerate}
-For example one set of questions read: ``How many men have smoked cigarettes before?'' and ``For a typical man who has smoked cigarettes before, how frequently does he smoke cigarettes?''. 
+For example, one set of questions read: ``How many men have smoked cigarettes before?''; ``For a typical man who has smoked cigarettes before, how frequently does he smoke cigarettes?''
 %Participants filled in values freely for N and M, and chose from drop-down menus for J and K, with the default settings shown above. 
 %Question 1 had a response format of entering a number, and participants were free to make the comparison number larger (default: 1000) should the event be more rare than 1 out of 1000.
 %Question 2 had a response format of entering a number of instances out of the time period of a year (by default). Participants were free to change the time period to week, month, or 5 years. \ndg{it's not totally clear how this procedure works... reword for clarity.}
 
-We anticipated there might be different beliefs about the frequency of events depending on whether the actor is male or female, so we asked about both genders. Participants answered both questions for each gender on each slide (4 questions total per slide, order of male / female randomized between-subjects), and every participant completed all 31 items in random order.
+We anticipated there might be different beliefs about the frequency of events depending on whether the actor is male or female, so we asked about both genders. Participants answered both questions for each gender on each slide (4 questions total per slide, order of male / female randomized between-subjects), and every participant completed all 31 items in random order\footnote{
 The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/priors/priors-2.html}.
-
+}
 \begin{figure*}[t]
 \centering
   \includegraphics[width=0.85\textwidth]{tj-scatters}
