take care of some orphans

--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -85,7 +85,7 @@ events; generics; pragmatics; Bayesian data analysis; Bayesian cognitive model
 \end{abstract}
 
 
-Figuring out that a person tends to exhibit a behavior can be crucial and hard-won knowledge.
+Figuring out that a person or thing tends to exhibit a behavior can be crucial and hard-won knowledge.
 %The tendency of particular individuals to participate in an event can be crucial and hard-won knowledge. 
 It is thus not surprising that language has ways to convey this information about propensity:
 \emph{Bill smokes}, \emph{That man steals from children}, \emph{My car doesn't start}.
@@ -95,7 +95,7 @@ These are called \emph{habitual sentences}.
 %%Predicting the behaviors of others is  is necessary to figure out what others will do. Must be able to predict caretaker?s behavior.
 %Language allows us to communicate generalizations to each other, but under what evidence would you make and communicate such generalizations?
 Like many other linguistic means of conveying generalizations, the truth-conditions of habituals are extremely flexible:
-If Bill smoked three cigarettes last month, can you say that \emph{Bill smokes}? Three cigarettes last week? 
+If Bill smoked three cigarettes last month, can you say that \emph{Bill smokes}? %Three cigarettes last week? 
 If he smoked a pack last week, but had just sworn a solemn oath to quit?
 %Generalizing an event (such as Bill smoking) over time is useful for future predictions about the occurrence of that event.
 %But what evidence do you need to make and communicate such a generalization? 
@@ -147,7 +147,7 @@ In Expt.~2, we use those priors and the pragmatic theory to make predictions abo
 %Habituals, unlike generics, make it possible to explore an important issue in this theoretical framework: 
 
 If habituals, and generics, are truly language for conveying generalizations, we would expect them to reflect expectations, not merely observations.
-Is the underlying dimension for habituals the actual, or past, frequency of the event (e.g.~how often Bill has actually smoked in the past week) or the predictive probability that this event will happen in the near future (e.g.~how likely it is that Bill will smoke in the next week)?
+Is the underlying dimension for habituals the actual, past frequency of the event (e.g.~how often Bill has actually smoked in the past week) or the predictive probability that this event will occur in the near future (e.g.~how likely it is that Bill will smoke next week)?
 In Expts.~3 \& 4, we show that the object of communication is a speaker's prediction about the future frequency of action, and not past frequency.
 This has important implications about the relationship between linguistic generalization and intuitive theories, which we explore briefly in the discussion.
 
@@ -159,9 +159,9 @@ This has important implications about the relationship between linguistic genera
 A habitual sentence expresses a generalization about the tendency of an individual to participate in a kind of event\footnote{
 We articulate the formalization in terms of individuals, but the theory applies straightforwardly to events without actors (e.g \emph{It rains around here.}).
 }.
-For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $E$ (e.g.~\textsc{smoking}), we refer to the rate at which an individual $I$ participates in an event $E$ for a given time window  
+For a given individual (e.g.~\textsc{Bill}) and an event or behavior (e.g.~\textsc{smoking}), we refer to the rate at which an individual participates in an event for a given time window  
 %that is $ \lambda_{t} = \int_{t} \mathbbm{1}_{I \in E}dt$, 
-as the \emph{propensity} of $I$ doing $E$, denoted  $\lambda$.
+as the \emph{propensity}, denoted  $\lambda$.
 %\ndg{maybe it's better to talk about the underlying scale as a rate? what's up with the ** in the integral here?}
 %
 A natural denotation for the habitual is a simple threshold on propensity $\lambda > \tau$ \cite<c.f.>{Cohen1999}, yet no fixed value for $\tau$ would lead to the observed flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{writes novels}).
